@@ -10,6 +10,7 @@ from pypet.tests.parameter_test import ArrayParameterTest,PickleParameterTest,Sp
 from pypet.tests.trajectory_test import SingleRunQueueTest, SingleRunTest, TrajectoryFindTest, TrajectoryMergeTest, TrajectoryTest
 from pypet.tests.hdf5_storage_test import ResultSortTest, EnvironmentTest, StorageTest, TestOtherHDF5Settings, TestOtherHDF5Settings2
 from pypet.tests.hdf5_merge_test import TestMergeResultsSort, MergeTest
+from pypet.tests.test_pipeline import TestPostProcessing
 try:
     from pypet.tests.hdf5_removal_and_continue_tests import ContinueTest
 except ImportError as e:
