@@ -1,18 +1,6 @@
 __author__ = 'Robert Meyer'
 
-
-
-
-
 import numpy as np
-
-import sys
-if (sys.version_info < (2, 7, 0)):
-    import unittest2 as unittest
-else:
-    import unittest
-
-
 
 
 from pypet.trajectory import Trajectory
